# aitrios-sdk-vision-sensing-app

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Notice.md  README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  initializeCommand  initializeCommand.cmd  postCreateCommand.sh
.devcontainer/cvat/: create_superuser.sh  docker-compose.devcontainer-2.yml  docker-compose.devcontainer.yml  startup.sh  stop.sh
.devcontainer/vott/: vott.sh
.devcontainer/wamr-ide/: download.sh  install_codespaces.sh  install_localdevcontainer.sh
.github/: CODEOWNERS
docs/: Coding_guidelines.md
docs/development-docs/AsciiDoc/: EdgeApplicationSDK_FuncSpec_APIInitialize.adoc  EdgeApplicationSDK_FuncSpec_APIInitialize_ja.adoc  EdgeApplicationSDK_FuncSpec_ApplicationDevelopment.adoc  EdgeApplicationSDK_FuncSpec_ApplicationDevelopment_ja.adoc  EdgeApplicationSDK_FuncSpec_Deserialize.adoc  EdgeApplicationSDK_FuncSpec_Deserialize_ja.adoc  EdgeApplicationSDK_FuncSpec_DevelopmentContainer.adoc  EdgeApplicationSDK_FuncSpec_DevelopmentContainer_ja.adoc  EdgeApplicationSDK_FuncSpec_ImageAnnotationCvat.adoc  EdgeApplicationSDK_FuncSpec_ImageAnnotationCvat_ja.adoc  EdgeApplicationSDK_FuncSpec_ImageDownload.adoc  EdgeApplicationSDK_FuncSpec_ImageDownload_ja.adoc  EdgeApplicationSDK_FuncSpec_ModelAndPPLDeploy.adoc  EdgeApplicationSDK_FuncSpec_ModelAndPPLDeploy_ja.adoc  EdgeApplicationSDK_FuncSpec_ModelAndPPLImport.adoc  EdgeApplicationSDK_FuncSpec_ModelAndPPLImport_ja.adoc  EdgeApplicationSDK_FuncSpec_ModelQuantization.adoc  EdgeApplicationSDK_FuncSpec_ModelQuantization_ja.adoc  EdgeApplicationSDK_FuncSpec_ModelTraining.adoc  EdgeApplicationSDK_FuncSpec_ModelTraining_ja.adoc  EdgeApplicationSDK_FuncSpec_SDKInADay.adoc  EdgeApplicationSDK_FuncSpec_SDKInADay_ja.adoc  EdgeApplicationSDK_FuncSpec_VersionControl.adoc  EdgeApplicationSDK_FuncSpec_VersionControl_ja.adoc  VisionandSensingApplicationSDK_FuncSpec_APIInitialize.adoc  VisionandSensingApplicationSDK_FuncSpec_APIInitialize_ja.adoc  VisionandSensingApplicationSDK_FuncSpec_ApplicationDevelopment.adoc  VisionandSensingApplicationSDK_FuncSpec_ApplicationDevelopment_ja.adoc  VisionandSensingApplicationSDK_FuncSpec_Deserialize.adoc  VisionandSensingApplicationSDK_FuncSpec_Deserialize_ja.adoc  VisionandSensingApplicationSDK_FuncSpec_DevelopmentContainer.adoc  VisionandSensingApplicationSDK_FuncSpec_DevelopmentContainer_ja.adoc  VisionandSensingApplicationSDK_FuncSpec_ImageAnnotationCvat.adoc  VisionandSensingApplicationSDK_FuncSpec_ImageAnnotationCvat_ja.adoc  VisionandSensingApplicationSDK_FuncSpec_ImageAnnotation_ja.adoc  VisionandSensingApplicationSDK_FuncSpec_ImageDownload.adoc  VisionandSensingApplicationSDK_FuncSpec_ImageDownload_ja.adoc  VisionandSensingApplicationSDK_FuncSpec_ModelAndPPLDeploy.adoc  VisionandSensingApplicationSDK_FuncSpec_ModelAndPPLDeploy_ja.adoc  VisionandSensingApplicationSDK_FuncSpec_ModelAndPPLImport.adoc  (+11 more)
samples/: README.md
samples/zone_detection/: .gitignore  Dockerfile  README.md  bashrc  configuration_schema.json  sdk_in_a_day.ipynb
samples/zone_detection/application/: Makefile_VnS  build.sh  output_tensor.jsonc  start.sh
samples/zone_detection/deserialize/: binary_to_json.sh
samples/zone_detection/models/: pipeline.config
tools/: check_license.sh
tutorials/: README.md
tutorials/1_initialize/: README.md
tutorials/2_prepare_dataset/: README.md
tutorials/2_prepare_dataset/annotate_images/: README.md
tutorials/2_prepare_dataset/download_images/: README.md  configuration.json  configuration_schema.json  get_dataset_images_from_coco.ipynb
tutorials/3_prepare_model/: README.md
tutorials/3_prepare_model/develop_on_console/: README.md
tutorials/3_prepare_model/develop_on_sdk/: README.md
tutorials/4_prepare_application/: README.md
tutorials/4_prepare_application/1_develop/: Dockerfile  README.md  README_api_seq.md  README_migration_0.2_1.0.md  README_wasmdebug.md  build.sh  compile_fbs.sh  start.sh
tutorials/4_prepare_application/1_develop/testapp/loader/: CMakeLists.txt
tutorials/4_prepare_application/1_develop/testapp/loader/mock/: dev_mock.c  dev_mock.cpp  dev_mock.h  dev_mock_if.c  dev_mock_if.h
tutorials/4_prepare_application/1_develop/testapp/loader/src/: analyzer.c  analyzer.h  loader.c  loader.h  main.c  ppl_if.c  ppl_if.h
tutorials/4_prepare_application/2_import_to_console/: README.md  configuration_schema.json  import_to_console.ipynb
tutorials/4_prepare_application/3_deploy_to_device/: README.md  configuration_schema.json  deploy_to_device.ipynb
tutorials/4_prepare_application/delete_application_on_console/: README.md  configuration_schema.json  delete_application_on_console.ipynb
tutorials/4_quantize_model/: README.md
tutorials/5_evaluate/: README.md
tutorials/5_post_process/: Dockerfile  README.md  build.sh  compile_fbs.sh
tutorials/6_deploy/: README.md
tutorials/7_evaluate/: README.md
(+155 files in other folders)
